--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="title"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
